--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,9 @@
 name: Build
 
 on:
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
@@ -24,6 +27,8 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Analyze code formatting
+        run: ./gradlew ktlintCheck
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
