--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jlleitschuh.gradle.ktlint' version '9.2.1'
     id 'maven-publish'
 }
 
