--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'org.jlleitschuh.gradle.ktlint' version '9.2.1'
     id 'maven-publish'
+    id 'jacoco'
 }
+
+apply plugin: 'jacoco'
 
 group 'parts.code'
 version '0.0.3'
@@ -22,7 +25,23 @@ java {
 
 test {
     useJUnitPlatform()
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
+    testLogging.events 'passed', 'skipped', 'failed'
 }
+
+jacoco {
+    toolVersion = '0.8.5'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
+}
+
+test.finalizedBy jacocoTestReport
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
